Firefox does not support H264 signaled without fmtp attributes AKA Basline
Categories
(Core :: WebRTC: Audio/Video, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox128 | --- | fixed |
People
(Reporter: dbaker, Assigned: dbaker)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
(Keywords: webcompat:platform-bug)
Attachments
(1 file)
If receiving an SDP such as the one below Firefox will not find any valid video codecs. Support for signaling of H264 Baseline needs to be added.
"sdp": "v=0\r\no=server 1 1 IN IP4 str1-uswest2-104-193-186-207.addlive.io\r\ns=test\r\nt=0 0\r\na=setup:passive\r\na=ice-lite\r\na=fingerprint:sha-256 E9:1B:22:0E:40:9A:CE:C8:69:CF:86:84:31:95:A0:C7:89:C2:00:B3:C9:49:15:CF:98:CE:6B:CE:09:DC:02:4E\r\na=group:BUNDLE 0 1 2\r\nm=audio 443 UDP/TLS/RTP/SAVPF 111\r\nc=IN IP4 0.0.0.0\r\na=rtpmap:111 opus/48000/2\r\na=fmtp:111 minptime=40;useinbandfec=1\r\na=rtcp:443 IN IP4 0.0.0.0\r\na=rtcp-fb:111 transport-cc\r\na=extmap:1 urn:ietf:params:rtp-hdrext:ssrc-audio-level\r\na=setup:passive\r\na=mid:0\r\na=ptime:40\r\na=recvonly\r\na=ice-ufrag:kpzYmoK4BLPK+hPz\r\na=ice-pwd:d4ce8339cc01879cf168259f14ed3c3a\r\na=fingerprint:sha-256 E9:1B:22:0E:40:9A:CE:C8:69:CF:86:84:31:95:A0:C7:89:C2:00:B3:C9:49:15:CF:98:CE:6B:CE:09:DC:02:4E\r\na=ssrc:901502696 cname:36403\r\na=rtcp-mux\r\nm=video 443 UDP/TLS/RTP/SAVPF 99 98\r\nc=IN IP4 0.0.0.0\r\na=rtpmap:99 H264/90000\r\na=rtpmap:98 rtx/90000\r\na=fmtp:98 apt=99\r\na=rtcp:443 IN IP4 0.0.0.0\r\na=rtcp-fb:99 transport-cc\r\na=rtcp-fb:99 nack\r\na=rtcp-fb:99 nack pli\r\na=rtcp-fb:99 ccm fir\r\na=rtcp-fb:99 goog-remb\r\na=extmap:5 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=setup:passive\r\na=mid:1\r\na=recvonly\r\na=ice-ufrag:kpzYmoK4BLPK+hPz\r\na=ice-pwd:d4ce8339cc01879cf168259f14ed3c3a\r\na=fingerprint:sha-256 E9:1B:22:0E:40:9A:CE:C8:69:CF:86:84:31:95:A0:C7:89:C2:00:B3:C9:49:15:CF:98:CE:6B:CE:09:DC:02:4E\r\na=ssrc:3167636275 cname:88714\r\na=rtcp-mux\r\nm=video 443 UDP/TLS/RTP/SAVPF 99 98\r\nc=IN IP4 0.0.0.0\r\na=rtpmap:99 H264/90000\r\na=rtpmap:98 rtx/90000\r\na=fmtp:98 apt=99\r\na=rtcp:443 IN IP4 0.0.0.0\r\na=rtcp-fb:99 transport-cc\r\na=rtcp-fb:99 nack\r\na=rtcp-fb:99 nack pli\r\na=rtcp-fb:99 ccm fir\r\na=rtcp-fb:99 goog-remb\r\na=extmap:5 http://www.ietf.org/id/draft-holmer-rmcat-transport-wide-cc-extensions-01\r\na=setup:passive\r\na=mid:2\r\na=recvonly\r\na=ice-ufrag:kpzYmoK4BLPK+hPz\r\na=ice-pwd:d4ce8339cc01879cf168259f14ed3c3a\r\na=fingerprint:sha-256 E9:1B:22:0E:40:9A:CE:C8:69:CF:86:84:31:95:A0:C7:89:C2:00:B3:C9:49:15:CF:98:CE:6B:CE:09:DC:02:4E\r\na=ssrc:3606614340 cname:13705\r\na=rtcp-mux\r\n"
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
Comment 4•1 year ago
|
||
| bugherder | ||
Updated•1 year ago
|
Description
•