Bug 1900114 - Add signaling for Baseline H264.;r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D212312